--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
             <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
             <distribution>repo</distribution>
 
-            <comments>A business-friendly OSS license  lsqtest</comments>
+            <comments>A business-friendly OSS license</comments>
         </license>
     </licenses>
 
