1.去除redis相关代码 2.一键复制功能开发完成

--- a/disconf-web/src/main/resources/messages/config-controller-info.properties
+++ b/disconf-web/src/main/resources/messages/config-controller-info.properties
@@ -9,6 +9,8 @@ key.exist=\u914D\u7F6EKEY\u5DF2\u7ECF\u5B58\u5728!
 
 env.not.exist=\u73AF\u5883\u627E\u4E0D\u5230!
 
+env.version.copy.same=\u914d\u7f6e\u6e90\u4e0d\u80fd\u548c\u914d\u7f6e\u76ee\u7684\u4e00\u6837
+
 config.not.exist=\u914D\u7F6E\u4E0D\u5B58\u5728
 
 conf.item.value.null=\u66F4\u65B0\u5931\u8D25\uFF0C\u914D\u7F6E\u9879\u8F93\u5165\u4E3A\u7A7A
