arrange project structure

--- a/disconf-client/pom.xml
+++ b/disconf-client/pom.xml
@@ -8,7 +8,7 @@
     <version>${disconf-client.version}</version>
 
     <parent>
-        <groupId>com.baidu.disconf</groupId>
+        <groupId>com.ymatou.disconf</groupId>
         <artifactId>disconf-base</artifactId>
         <version>2.6.31</version>
     </parent>
@@ -25,17 +25,9 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.baidu.disconf</groupId>
+            <groupId>com.ymatou.disconf</groupId>
             <artifactId>disconf-core</artifactId>
             <version>${disconf-core.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.baidu.disconf</groupId>
-            <artifactId>disconf-core</artifactId>
-            <version>${disconf-core.version}</version>
-            <type>test-jar</type>
-            <scope>test</scope>
         </dependency>
 
         <!-- common dependencies -->
@@ -258,80 +250,7 @@
     </build>
 
     <name>disconf-client</name>
-    <url>https://github.com/knightliao/disconf/tree/master/disconf-client</url>
-    <description>https://github.com/knightliao/disconf/tree/master/disconf-client</description>
 
-    <organization>
-        <name>Baidu</name>
-        <url>http://www.example.com</url>
-    </organization>
 
-    <scm>
-        <url>scm:git:git@github.com:knightliao/disconf</url>
-        <connection>scm:git:git@github.com:knightliao/disconf</connection>
-        <tag>disconf-client</tag>
-    </scm>
-
-    <profiles>
-        <profile>
-            <id>release</id>
-            <distributionManagement>
-                <snapshotRepository>
-                    <id>nexus-release</id>
-                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-                </snapshotRepository>
-                <repository>
-                    <id>nexus-release</id>
-                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-                </repository>
-            </distributionManagement>
-            <build>
-                <plugins>
-                    <!-- Source -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-source-plugin</artifactId>
-                        <version>2.2.1</version>
-                        <executions>
-                            <execution>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>jar-no-fork</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <!-- Javadoc -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.9.1</version>
-                        <executions>
-                            <execution>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.5</version>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 
 </project>
