--- a/disconf-core/pom.xml
+++ b/disconf-core/pom.xml
@@ -11,7 +11,7 @@
     <name>disconf-core</name>
 
     <parent>
-        <groupId>com.baidu.disconf</groupId>
+        <groupId>com.ymatou.disconf</groupId>
         <artifactId>disconf-base</artifactId>
         <version>2.6.31</version>
     </parent>
