--- a/disconf-web/pom.xml
+++ b/disconf-web/pom.xml
@@ -10,7 +10,7 @@
     <name>disconf-web</name>
 
     <parent>
-        <groupId>com.baidu.disconf</groupId>
+        <groupId>com.ymatou.disconf</groupId>
         <artifactId>disconf-base</artifactId>
         <version>2.6.31</version>
     </parent>
@@ -18,7 +18,7 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.baidu.disconf</groupId>
+            <groupId>com.ymatou.disconf</groupId>
             <artifactId>disconf-core</artifactId>
             <version>${disconf-core.version}</version>
         </dependency>
@@ -338,93 +338,7 @@
         <defaultGoal>package</defaultGoal>
         <finalName>${project.artifactId}</finalName>
 
-        <resources>
-            <resource>
-                <directory>${project.basedir}/src/main/resources</directory>
-                <includes>
-                    <include>**/*.*</include>
-                </includes>
-            </resource>
-        </resources>
-
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <configuration>
-                    <webResources>
-                        <resource>
-                            <directory>${project.basedir}/src/main/resources</directory>
-                            <includes>
-                                <include>**/*.*</include>
-                            </includes>
-                        </resource>
-                    </webResources>
-                </configuration>
-            </plugin>
-
-        </plugins>
     </build>
-
-    <profiles>
-        <!-- 开发环境默认激活的profile -->
-        <profile>
-            <id>rd</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <build>
-                <resources>
-                    <!-- 指定环境差异配置的配置文件所在目录 -->
-                    <resource>
-                        <directory>${basedir}/profile/rd</directory>
-                    </resource>
-                </resources>
-            </build>
-        </profile>
-
-        <!-- online -->
-        <profile>
-            <id>online</id>
-            <build>
-                <plugins>
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-war-plugin</artifactId>
-                        <configuration>
-                            <webResources>
-
-                                <resource>
-                                    <directory>${project.build.online.sourceDir}</directory>
-                                    <targetPath>WEB-INF/classes</targetPath>
-                                    <includes>
-                                        <include>**/*.*</include>
-                                    </includes>
-                                </resource>
-
-                                <resource>
-                                    <directory>${project.build.online.sourceDir}</directory>
-                                    <targetPath>/</targetPath>
-                                </resource>
-
-                            </webResources>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 
 </project>
 
