--- a/disconf-web/src/main/webapp/WEB-INF/web.xml
+++ b/disconf-web/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
     <display-name>mvc-web</display-name>
 
     <welcome-file-list>
-        <welcome-file>index</welcome-file>
+        <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 
     <context-param>
