--- a/disconf-web/pom.xml
+++ b/disconf-web/pom.xml
@@ -332,23 +332,36 @@
         </dependency>
 
     </dependencies>
-
-    <!-- build -->
+    
+    
     <build>
-        <defaultGoal>package</defaultGoal>
-        <finalName>${project.artifactId}</finalName>
-    	<plugins>
-      		<plugin>
-        	<artifactId>maven-war-plugin</artifactId>
-        	<version>2.6</version>
-        	<configuration>
-          		<packagingExcludes>
-          			WEB-INF/classes/config/**
-          		</packagingExcludes>
-        	</configuration>
-      </plugin>
-    </plugins>
+    	<finalName>${project.artifactId}</finalName>
     </build>
+     
+     <profiles>
+        <profile>
+            <id>prd</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+    		<build>
+    			<plugins>
+      				<plugin>
+	        			<artifactId>maven-war-plugin</artifactId>
+	        			<version>2.6</version>
+	        			<configuration>
+	          				<packagingExcludes>
+	          					WEB-INF/classes/config/**
+	          				</packagingExcludes>
+	        			</configuration>
+      				</plugin>
+    			</plugins>
+    		</build>
+        </profile>
+        <profile>
+            <id>dev</id>
+        </profile>
+    </profiles>
 
 </project>
 
