--- a/disconf-client/pom.xml
+++ b/disconf-client/pom.xml
@@ -251,6 +251,17 @@
 
     <name>disconf-client</name>
 
-
+	<distributionManagement>
+		<repository>
+			<id>releases</id>
+			<name>Nexus Release Repository</name>
+			<url>http://172.16.100.98/nexus/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<name>Nexus Release Repository</name>
+			<url>http://172.16.100.98/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 </project>
