--- a/disconf-web/src/main/webapp/WEB-INF/web.xml
+++ b/disconf-web/src/main/webapp/WEB-INF/web.xml
@@ -43,14 +43,15 @@
 
     <filter>
         <filter-name>CAS Authentication Filter</filter-name>
-        <filter-class>org.jasig.cas.client.authentication.AuthenticationFilter</filter-class>
+        <!--<filter-class>org.jasig.cas.client.authentication.AuthenticationFilter</filter-class>-->
+        <filter-class>com.baidu.dsp.common.filter.DisconfAuthenticationFilter</filter-class>
         <init-param>
             <param-name>casServerLoginUrl</param-name>
             <param-value>http://sso.ops.ymatou.cn/login</param-value>
         </init-param>
         <init-param>
             <param-name>serverName</param-name>
-            <param-value>http://localhost:8080</param-value>
+            <param-value>${domain}</param-value>
         </init-param>
         <init-param>
             <param-name>ignoreUrlPatternType</param-name>
@@ -65,14 +66,15 @@
 
     <filter>
         <filter-name>CAS Validation Filter</filter-name>
-        <filter-class>org.jasig.cas.client.validation.Cas20ProxyReceivingTicketValidationFilter</filter-class>
+        <!--<filter-class>org.jasig.cas.client.validation.Cas20ProxyReceivingTicketValidationFilter</filter-class>-->
+        <filter-class>com.baidu.dsp.common.filter.DisconfCas20ProxyReceivingTicketValidationFilter</filter-class>
         <init-param>
             <param-name>casServerUrlPrefix</param-name>
             <param-value>http://sso.ops.ymatou.cn</param-value>
         </init-param>
         <init-param>
             <param-name>serverName</param-name>
-            <param-value>http://localhost:8080</param-value>
+            <param-value>${domain}</param-value>
         </init-param>
     </filter>
 
