--- a/disconf-core/pom.xml
+++ b/disconf-core/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.ymatou.disconf</groupId>
         <artifactId>disconf-base</artifactId>
-        <version>2.6.31</version>
+        <version>2.6.32</version>
     </parent>
 
     <licenses>
@@ -61,10 +61,6 @@
             <artifactId>zookeeper</artifactId>
             <exclusions>
                 <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-                <exclusion>
                     <groupId>com.sun.jmx</groupId>
                     <artifactId>jmxri</artifactId>
                 </exclusion>
@@ -76,6 +72,10 @@
                     <groupId>javax.jms</groupId>
                     <artifactId>jms</artifactId>
                 </exclusion>
+                 <exclusion>
+                 	<groupId>org.slf4j</groupId>
+                 	<artifactId>slf4j-log4j12</artifactId>
+                  </exclusion>
             </exclusions>
         </dependency>
 
@@ -84,26 +84,6 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.sun.jmx</groupId>
-                    <artifactId>jmxri</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.sun.jdmk</groupId>
-                    <artifactId>jmxtools</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.jms</groupId>
-                    <artifactId>jms</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <!-- test dependencies -->
