--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.ymatou.disconf</groupId>
 	<artifactId>disconf-base</artifactId>
-	<version>2.6.31</version>
+	<version>2.6.32</version>
 	<packaging>pom</packaging>
 
 	<modules>
@@ -30,9 +30,9 @@
 		<maven.test.skip>true</maven.test.skip>
 
 		<!-- 模块版本号 -->
-		<disconf-core.version>2.6.31</disconf-core.version>
-		<disconf-client.version>2.6.31</disconf-client.version>
-		<disconf-client-spring.version>2.6.31</disconf-client-spring.version>
+		<disconf-core.version>2.6.32</disconf-core.version>
+		<disconf-client.version>2.6.32</disconf-client.version>
+		<disconf-client-spring.version>2.6.32</disconf-client-spring.version>
 
 		<!-- Spring項目配置 -->
 		<encoding>UTF-8</encoding>
@@ -162,7 +162,7 @@
 			<dependency>
 				<groupId>org.apache.zookeeper</groupId>
 				<artifactId>zookeeper</artifactId>
-				<version>3.3.6</version>
+				<version>3.4.6</version>
 				<exclusions>
 					<exclusion>
 						<groupId>com.sun.jmx</groupId>
@@ -175,6 +175,10 @@
 					<exclusion>
 						<groupId>javax.jms</groupId>
 						<artifactId>jms</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-log4j12</artifactId>
 					</exclusion>
 				</exclusions>
 			</dependency>
@@ -495,26 +499,6 @@
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
 				<version>1.0.9</version>
-			</dependency>
-
-			<dependency>
-				<groupId>log4j</groupId>
-				<artifactId>log4j</artifactId>
-				<version>1.2.14</version>
-				<exclusions>
-					<exclusion>
-						<groupId>com.sun.jmx</groupId>
-						<artifactId>jmxri</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>com.sun.jdmk</groupId>
-						<artifactId>jmxtools</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>javax.jms</groupId>
-						<artifactId>jms</artifactId>
-					</exclusion>
-				</exclusions>
 			</dependency>
 
 			<dependency>
