--- a/disconf-core/pom.xml
+++ b/disconf-core/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>disconf-core</artifactId>
-    <version>${disconf-core.version}</version>
+    <version>${disconf.version}</version>
     <packaging>jar</packaging>
 
     <name>disconf-core</name>
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.ymatou.disconf</groupId>
         <artifactId>disconf-base</artifactId>
-        <version>2.6.32</version>
+        <version>2.6.35</version>
     </parent>
 
     <licenses>
