--- a/disconf-web/pom.xml
+++ b/disconf-web/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>com.ymatou.disconf</groupId>
         <artifactId>disconf-base</artifactId>
-        <version>2.6.32</version>
+        <version>2.6.35</version>
     </parent>
 
     <dependencies>
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>com.ymatou.disconf</groupId>
             <artifactId>disconf-core</artifactId>
-            <version>${disconf-core.version}</version>
+            <version>${disconf.version}</version>
         </dependency>
 
         <!-- spring dependencies -->
