--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.ymatou.disconf</groupId>
 	<artifactId>disconf-base</artifactId>
-	<version>2.6.32</version>
+	<version>2.6.35</version>
 	<packaging>pom</packaging>
 
 	<modules>
@@ -30,8 +30,7 @@
 		<maven.test.skip>true</maven.test.skip>
 
 		<!-- 模块版本号 -->
-		<disconf-core.version>2.6.34</disconf-core.version>
-		<disconf-client.version>2.6.34</disconf-client.version>
+		<disconf.version>2.6.35</disconf.version>
 
 		<!-- Spring項目配置 -->
 		<encoding>UTF-8</encoding>
@@ -554,7 +553,6 @@
 				<artifactId>slf4j-log4j12</artifactId>
 				<version>1.4.3</version>
 			</dependency>
-
 		</dependencies>
 	</dependencyManagement>
 
