--- a/disconf-web/src/main/resources/config/jdbc-mysql.properties
+++ b/disconf-web/src/main/resources/config/jdbc-mysql.properties
@@ -10,3 +10,4 @@ jdbc.minPoolSize=10
 jdbc.initialPoolSize=10
 jdbc.idleConnectionTestPeriod=1200
 jdbc.maxIdleTime=3600
+jdbc.testQuerySql=select 1
