修改邮件地址

--- a/disconf-web/src/main/resources/config/application.properties
+++ b/disconf-web/src/main/resources/config/application.properties
@@ -10,7 +10,7 @@ domain=localhost:8081
 #
 
 EMAIL_MONITOR_ON = true
-EMAIL_HOST = smtp.qq.com
+EMAIL_HOST = smtp.exmail.qq.com
 EMAIL_HOST_PASSWORD = infra@Ymatou1
 EMAIL_HOST_USER = disconf@ymatou.com
 EMAIL_PORT = 25
