--- a/disconf-web/src/main/resources/config/jdbc-mysql.properties
+++ b/disconf-web/src/main/resources/config/jdbc-mysql.properties
@@ -1,6 +1,11 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 
-jdbc.db_0.url=jdbc:mysql://172.16.100.173:3306/disconf?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull\
+#jdbc.db_0.url=jdbc:mysql://172.16.100.173:3306/disconf?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull\
+#  &rewriteBatchedStatements=false&useOldAliasMetadataBehavior=true
+#jdbc.db_0.username=disconfuser
+#jdbc.db_0.password=123456
+
+jdbc.db_0.url=jdbc:mysql://mysql.ymatou.com:30001/disconf?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull\
   &rewriteBatchedStatements=false&useOldAliasMetadataBehavior=true
 jdbc.db_0.username=disconfuser
 jdbc.db_0.password=123456
