--- a/disconf-web/src/main/resources/config/application.properties
+++ b/disconf-web/src/main/resources/config/application.properties
@@ -20,3 +20,5 @@ DEFAULT_FROM_EMAIL = disconf@ymatou.com
 # \u5b9a\u65f6\u6821\u9a8c\u4e2d\u5fc3\u7684\u914d\u7f6e\u4e0e\u6240\u6709\u5ba2\u6237\u7aef\u914d\u7f6e\u7684\u4e00\u81f4\u6027
 #
 CHECK_CONSISTENCY_ON= true
+
+ldapUrl=ymt-ad-01.ymt.corp
