--- a/disconf-web/src/test/resources/application.properties
+++ b/disconf-web/src/test/resources/application.properties
@@ -24,3 +24,5 @@ DEFAULT_FROM_EMAIL = disconf@163.com
 # \u5B9A\u65F6\u6821\u9A8C\u4E2D\u5FC3\u7684\u914D\u7F6E\u4E0E\u6240\u6709\u5BA2\u6237\u7AEF\u914D\u7F6E\u7684\u4E00\u81F4\u6027
 #
 CHECK_CONSISTENCY_ON= false
+
+ldapUrl=ymt-ad-01.ymt.corp
