修复zk 连接失败问题 加上连接日志

--- a/disconf-client/src/test/resources/integration/disconf.properties
+++ b/disconf-client/src/test/resources/integration/disconf.properties
@@ -1,5 +1,6 @@
 #disconf service
-disconf.conf_server_host=127.0.0.1:9109
+#disconf.conf_server_host=127.0.0.1:9119
+disconf.conf_server_host=disconf.iapi.ymatou.com
 
 #app config version
 disconf.version=1_0_0_0
