解决配置文件中文问题

--- a/disconf-client/src/test/resources/disconf.properties
+++ b/disconf-client/src/test/resources/disconf.properties
@@ -30,3 +30,4 @@ disconf.conf_server_url_retry_sleep_seconds=5
 
 # \u7528\u6237\u6307\u5B9A\u7684\u4E0B\u8F7D\u6587\u4EF6\u5939, \u8FDC\u7A0B\u6587\u4EF6\u4E0B\u8F7D\u540E\u4F1A\u653E\u5728\u8FD9\u91CC
 disconf.user_define_download_dir=/opt/config/disconf_testcase
+test=中文
